--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 # docker-compose run --rm maven
+# docker-compose run -it --rm maven:3.3-jdk-8 mvn clean
 
 version: '3'
 services:
@@ -9,3 +10,7 @@ services:
     stdin_open: true 
     tty: true
     command: bash
+    working_dir: /usr/src/mymaven
+    volumes:
+    - ./:/usr/src/mymaven
+  
