--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,20 @@
   <version>1.0-SNAPSHOT</version>
   <name>my-app</name>
   <url>http://maven.apache.org</url>
-
+  
+  <distributionManagement>
+	<snapshotRepository>
+		<id>nexus</id>
+		<name>maven-snapshots</name>
+		<url>http://host.docker.internal:8081/repository/maven-snapshots/</url>
+	</snapshotRepository>
+	<repository>
+		<id>nexus</id>
+		<name>maven-releases</name>
+		<url>http://host.docker.internal:8081/repository/maven-releases/</url>
+	</repository>
+  </distributionManagement>
+  
   <properties>
       <!-- This property will be set by the Maven Dependency plugin -->
       <annotatedJdk>${org.checkerframework:jdk8:jar}</annotatedJdk>
